# solid-ml-stack-s5e7

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  COVERAGE_IMPROVEMENT_REPORT.md  Makefile  Makefile.md  README.md  pyproject.toml  pytest_plugins.py  requirements.txt  submission_generation_summary.md
.github/workflows/: ci.yml
data/: workflow_times.json
docs/: BASELINE_IMPLEMENTATION.md  CLAUDE-JP.md  Kaggle プロジェクトを「再開・やり直し」するときの大きな流れ.md  enhanced_silver_strategies.md  todo.md  want-todo.md  やりなおし てｊｙｙん.md  やりなおし 手順.md  やりなおし.md  やり直してよかった理由 - 詳細分析  コンペティション内容.md  再開手順.md  改善結果.md  精度向上対策 アンサンブル強化.md  精度向上対策 前処理.md  精度向上対策 欠損値処理.md  精度向上対策 特徴量エンジニアリング.md
docs/memo/: mlflow.md  ブランチ運用.md  公開ソリューションから得た「即効性の高い」施策.md  評価.md  課題.md  ｓｓｓｓｓｓｓ.md
docs/設計/: テストコード整理整頓の設計案.md  データ層確定（DuckDB 3 段階）.md  フェーズ4_ベースライン実装設計.md  ブロンズ、シルバー、ゴールド級データ管理パターンの段階的設計.md  高度な前処理設計.md  高度な特徴量エンジニアリング設計.md
scripts/: best_submission_generator.py  bronze_medal_optimized.py  bronze_medal_push.py  demo_silver_enhanced.py  demo_time_tracker.py  enhanced_gold_minimal.py  feature_selection_boost.py  fine_tuned_params.py  hyperparameter_benchmark.py  optimized_params.py  predict_with_gold.py  quick_cv_enhanced.py  simple_predict.py  submission_options.py  test_fine_tuned.py  test_pipeline.py  time_tracker_cli.py  train.py  train_enhanced.py  train_heavy.py  train_light.py  train_silver_enhanced.py  train_silver_enhanced_fixed.py  validate_submission.py
src/: models.py  validation.py
src/data/: __init__.py  bronze.py  gold.py  silver.py  silver_enhanced.py
src/util/: notifications.py  time_tracker.py
tests/: REFACTORING_SUMMARY.md  conftest.py  test_bronze.py  test_coverage_focused.py  test_cross_module_integration.py  test_data_comprehensive.py  test_data_enhanced.py  test_data_real.py  test_database_integration.py  test_error_scenarios_integration.py  test_gold.py  test_gold_functions.py  test_integration_comprehensive.py  test_ml_pipeline_integration.py  test_models.py  test_models_comprehensive.py  test_models_enhanced.py  test_notification_integration.py  test_notifications.py  test_pipeline_integration.py  test_silver.py  test_silver_enhanced.py  test_silver_functions.py  test_silver_gold_enhanced.py  test_smoke_cv_enhanced.py  test_time_tracker.py  test_train_script.py  test_util_comprehensive.py  test_util_modules.py  test_utilities_enhanced.py  test_validation.py  test_validation_comprehensive.py  test_validation_enhanced.py  test_validation_real.py
tests/scripts/: test_train.py
(+13 files in other folders)
